# Projet_Fin_session

./: .gitignore  LICENSE  README.md  app.py  config.yaml  main.py  pyproject.toml  rapport_final.txt  rapport_final_20260609_201201.txt  requirements.txt  test_solveurs.py
doc_html/: app.html  genindex.html  gestion_donnees.html  index.html  main.html  modele_substitution.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  solveur_analytique.html  solveur_ef.html  solveurs.html  source.html  tests.html  visualisation.html
donnees/: contrainte_F10_T140.txt  contrainte_F10_T20.txt  contrainte_F10_T200.txt  contrainte_F10_T20_ansys_real.txt  contrainte_F10_T80.txt  contrainte_F20_T140.txt  contrainte_F20_T20.txt  contrainte_F20_T200.txt  contrainte_F20_T80.txt  contrainte_F30_T140.txt  contrainte_F30_T20.txt  contrainte_F30_T200.txt  contrainte_F30_T80.txt  contrainte_F40_T140.txt  contrainte_F40_T20.txt  contrainte_F40_T200.txt  contrainte_F40_T80.txt  contrainte_ansys.txt  contrainte_x_F10_T140.txt  contrainte_x_F10_T20.txt  contrainte_x_F10_T200.txt  contrainte_x_F10_T20_ansys_real.txt  contrainte_x_F10_T80.txt  contrainte_x_F20_T140.txt  contrainte_x_F20_T20.txt  contrainte_x_F20_T200.txt  contrainte_x_F20_T80.txt  contrainte_x_F30_T140.txt  contrainte_x_F30_T20.txt  contrainte_x_F30_T200.txt  contrainte_x_F30_T80.txt  contrainte_x_F40_T140.txt  contrainte_x_F40_T20.txt  contrainte_x_F40_T200.txt  contrainte_x_F40_T80.txt  deplacement_F10_T140.txt  deplacement_F10_T20.txt  deplacement_F10_T200.txt  deplacement_F10_T80.txt  (+28 more)
tests/: test_ml.py  (+4 more)
(+11 files in other folders)
